--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="msapplication-TileImage" content="icon/icon-144.png">
     <meta name="msapplication-TileColor" content="#2F3BA2">
     <title>Horn</title>
-    <link rel="mainfest" href="./mainfest.json">
+    <link rel="manfest" href="./mainfest.json">
   </head>
   <body>
     <div id="appFrame"></div>
