--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="msapplication-TileImage" content="icon/icon-144.png">
+    <meta name="msapplication-TileImage" content="./icon/icon-144.png">
     <meta name="msapplication-TileColor" content="#2F3BA2">
     <title>Horn</title>
-    <link rel="manfest" href="./mainfest.json">
+    <link rel="manifest" href="./manifest.json">
   </head>
   <body>
     <div id="appFrame"></div>
