--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="msapplication-TileImage" content="./icon/icon-144.png">
     <meta name="msapplication-TileColor" content="#2F3BA2">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Horn">
+    <link rel="apple-touch-icon" href="./icon/icon-152.png">
+    <link rel="shortcut icon" href="./icon/icon-128.png">
     <title>Horn</title>
     <link rel="manifest" href="./manifest.json">
   </head>
